# openMCP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.calculator  Dockerfile.openmcp  README.md  docker-compose.yml  docker-start.sh  pyproject.toml  run_example.sh
docs/: README_DOCKER.md  README_FLASK.md  README_OLLAMA.md
examples/: calculator_api.py  chat_client.py  docker_chat_client.py  simple_chat.py  test_calculator.py
openmcp/: app.py
openmcp/api/: __init__.py  discovery_api.py  tools_api.py
openmcp/core/: ollama_integration.py  ollama_tools.py  openapi_parser.py
openmcp/utils/: logging.py
specs/: calculator-api-docker.yaml  calculator-api.yaml  example-api.yaml
